--- a/app/src/main/res/navigation/nav_activity_main.xml
+++ b/app/src/main/res/navigation/nav_activity_main.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_homeFragment_to_singleProductFragment"
             app:destination="@id/singleProductFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_addProductFragment"
+            app:destination="@id/addProductFragment" />
     </fragment>
     <fragment
         android:id="@+id/wishListFragment"
@@ -46,4 +49,9 @@
         android:name="com.matrix.android_104_android.ui.fragments.SingleProductFragment"
         android:label="fragment_single_product"
         tools:layout="@layout/fragment_single_product" />
+    <fragment
+        android:id="@+id/addProductFragment"
+        android:name="com.matrix.android_104_android.ui.fragments.AddProductFragment"
+        android:label="fragment_add_product"
+        tools:layout="@layout/fragment_add_product" />
 </navigation>
